# BobbyClicker2

./: README.md  config.json  main.py  pyproject.toml  stats.json  taskfile.yml
src/: read_input.py  stats.py
