[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/BobbyClicker2"]

[project]
name = "BobbyClicker2"
version = "0.0.1"
description = "Auto clicker"
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Stelian Stefanov", email = "stefsnov.stely@gmail.com" }]

dependencies = ["pynput", "customtkinter", "keyboard", "mouse", "pillow"]

[dependency-groups]
dev = []
